Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125415

error: no member named 'pix' in 'QQuickPdfPageImagePrivate'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.8.0 FF
    • 6.8.0 FF
    • PDF
    • None
    • 0e2d491b3 (dev)

    Description

      C:/Users/qt/work/qt/qtwebengine/src/pdfquick/qquickpdfpageimage.cpp
      C:/Users/qt/work/qt/qtwebengine/src/pdfquick/qquickpdfpageimage.cpp:45:8: error: no member named 'pix' in 'QQuickPdfPageImagePrivate'
         45 |     d->pix.clear();
            |     ~  ^
      C:/Users/qt/work/qt/qtwebengine/src/pdfquick/qquickpdfpageimage.cpp:101:8: error: no member named 'pix' in 'QQuickPdfPageImagePrivate'
        101 |     d->pix.loadImageFromDevice(qmlEngine(this), carrierFile, url,
            |     ~  ^
      C:/Users/qt/work/qt/qtwebengine/src/pdfquick/qquickpdfpageimage.cpp:106:76: error: no member named 'pix' in 'QQuickPdfPageImagePrivate'
        106 |                     << "from" << carrierFile->fileName() << "status" << d->pix.status();
            |                                                                         ~  ^
      C:/Users/qt/work/qt/qtwebengine/src/pdfquick/qquickpdfpageimage.cpp:108:16: error: no member named 'pix' in 'QQuickPdfPageImagePrivate'
        108 |     switch (d->pix.status()) {
            |             ~  ^
      C:/Users/qt/work/qt/qtwebengine/src/pdfquick/qquickpdfpageimage.cpp:113:12: error: no member named 'pix' in 'QQuickPdfPageImagePrivate'
        113 |         d->pix.connectFinished(this, thisRequestFinished);
            |         ~  ^
      C:/Users/qt/work/qt/qtwebengine/src/pdfquick/qquickpdfpageimage.cpp:114:12: error: no member named 'pix' in 'QQuickPdfPageImagePrivate'
        114 |         d->pix.connectDownloadProgress(this, thisRequestProgress);
            |         ~  ^
      C:/Users/qt/work/qt/qtwebengine/src/pdfquick/qquickpdfpageimage.cpp:125:54: error: no member named 'pix' in 'QQuickPdfPageImagePrivate'
        125 |         qCDebug(qLcImg) << "unexpected status" << d->pix.status();
            |                                                   ~  ^
      7 errors generated.
      

      Build log: https://testresults.qt.io/logs/qt/qtwebengine/83404ce709636a6f1a221ab726a764be64d4a8cd/WindowsWindows_10_22H2x86_64WindowsWindows_10_22H2x86_64Clangqtci-windows-10_22H2-x86_64-51-c9683fSccache_UseConfigure/792bead33b23665ae412c1748e3d442848697eca/build_1715913297/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1715913262

      Tested changes (refs/builds/qtci/dev/1715905650):
      https://codereview.qt-project.org/c/qt/qtwebengine/+/561884/2 Update dependencies on 'dev' in qt/qtwebengine

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              srutledg Shawn Rutledge
              janihe Jani Heikkinen
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes