Teach QQuickPdfPageImage to use double-buffering

This was urgent due to the error: no member named 'pix' in
'QQuickPdfPageImagePrivate'. But we actually need the
double-buffering feature that was added in qtdeclarative
change e0e0f722b86db7b99185ccd669dd5456623e7e69.
Now a single-page viewer will not show a blank page while
"flipping" to another page in a PDF file.

Fixes: QTBUG-125415
Task-number: QTBUG-66713
Change-Id: Ia37682acf0818cfa55acecf668551467780fb0ae
Reviewed-by: Michal Klocek <michal.klocek@qt.io>